--- a/src/main/resources/templates/client/fragments/popover.html
+++ b/src/main/resources/templates/client/fragments/popover.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
 <div th:remove="tag" th:fragment="price">
-    <a id="price-btn" class="btn btn-outline-primary w-100 text-white">Rango de
-        precio</a>
+    <a id="price-btn" class="btn btn-outline-primary w-100 text-white">Rango de precio</a>
     <div id="price-nav-popover" class="popover hide">
         <h3 class="popover-header">Precio</h3>
         <div class="popover-body">
