--- a/src/main/resources/templates/client/fragments/search-filters.html
+++ b/src/main/resources/templates/client/fragments/search-filters.html
@@ -50,7 +50,7 @@
                     </span>
                 <input type="number" id="min-surface" class="form-control" placeholder="Min"
                        aria-label="min-surface"
-                       fas fa-layer-group aria-describedby="basic-addon-surface">
+                       aria-describedby="basic-addon-surface">
             </div>
         </div>
     </div>
