--- a/src/main/resources/templates/client/fragments/footer.html
+++ b/src/main/resources/templates/client/fragments/footer.html
@@ -1,15 +1,15 @@
 <!DOCTYPE HTML>
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
-<div th:remove th:fragment="script-files">
-    <script type="text/javascript" th:src="@{/assets/js/general/jquery-3.3.1.slim.min.js}" crossorigin="anonymous"></script>
-    <script type="text/javascript" th:src="@{/assets/js/general/wNumb.js}"></script>
-    <script type="text/javascript" th:src="@{/assets/js/general/popper.min.js}" crossorigin="anonymous"></script>
-    <script type="text/javascript" th:src="@{/assets/js/general/bootstrap.min.js}" crossorigin="anonymous"></script>
-    <script type="text/javascript" th:src="@{/assets/js/general/shards.min.js}"></script>
-    <script type="text/javascript" th:src="@{/assets/js/general/jquery.sharrre.min.js}"></script>
+<div th:remove="tag" th:fragment="script-files">
+    <script type="text/javascript" th:src="@{/assets/js/client/general/jquery-3.3.1.slim.min.js}" crossorigin="anonymous"></script>
+    <script type="text/javascript" th:src="@{/assets/js/client/general/wNumb.js}"></script>
+    <script type="text/javascript" th:src="@{/assets/js/client/general/popper.min.js}" crossorigin="anonymous"></script>
+    <script type="text/javascript" th:src="@{/assets/js/client/general/bootstrap.min.js}" crossorigin="anonymous"></script>
+    <script type="text/javascript" th:src="@{/assets/js/client/general/shards.min.js}"></script>
+    <script type="text/javascript" th:src="@{/assets/js/client/general/jquery.sharrre.min.js}"></script>
 </div>
 
-<footer th:fragment="standard-footer">
+<footer id="footer" th:fragment="standard-footer">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
             <a class="navbar-brand" href="#">Inmobiliaria</a>
