--- a/src/main/resources/templates/client/inline/map-config-description.html
+++ b/src/main/resources/templates/client/inline/map-config-description.html
@@ -65,5 +65,8 @@
             labelInBackground: false
         });
     }
+    $( document ).ready(function() {
+        initMap();
+    });
 </script>
 </html>
