--- a/src/main/resources/templates/client/contact-us.html
+++ b/src/main/resources/templates/client/contact-us.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 
-<head th:replace="client/fragments/navbar::headerfiles"></head>
+<head th:replace="client/fragments/navbar::header-files"></head>
 <header>
     <div class="bg-light pr-1 pl-1">
         <nav th:replace="client/fragments/navbar::commun"></nav>
