--- a/src/main/resources/templates/client/index.html
+++ b/src/main/resources/templates/client/index.html
@@ -132,8 +132,8 @@
 <!--  Inner Wrapper 2 -->
 <div class="slider-box _clearfix position-sticky">
     <div class="col-md-12 col-sm-0 paginator-center text-color text-center ">
-        <button class="btn btn-dark prev-slick ml-1"><i class="fas fa-arrow-left"></i></button>
-        <button class="btn btn-dark next-slick mr-1"><i class="fas fa-arrow-right"></i></button>
+        <button class="btn btn-lg btn-dark prev-slick ml-1"><i class="fas fa-arrow-left"></i></button>
+        <button class="btn btn-lg btn-dark next-slick mr-1"><i class="fas fa-arrow-right"></i></button>
     </div>
     <div id="intro-items" class="mt-4 mb-5">
         <div class="card mr-2 ml-2" th:href="@{/description}">
@@ -145,16 +145,16 @@
                 <div class="salient-fav fav-format">
                     <i class="fas fa-star text-warning"></i>
                 </div>
+                <div class="salient-interest d-flex justify-content-around">
+                    <i class="fas fa-heart text-danger fav-format"></i>
+                    <i class="fas fa-ban text-danger fav-format"></i>
+                </div>
             </div>
             <div class="card-body">
                 <div class="d-flex justify-content-between align-items-center">
                     <h5 class="card-title text-accent">Diseño rústico</h5>
-                    <div class="w-25 d-flex justify-content-around">
-                        <i class="fas fa-heart text-danger fav-format"></i>
-                        <i class="fas fa-ban text-danger fav-format"></i>
-                    </div>
                 </div>
-                <h5><i class="fas fa-dollar-sign"></i>1000</h5>
+                <h5><i class="fas fa-dollar-sign">1000</i></h5>
                 <hr>
                 <p>
                     <i class="fas fa-map-marker-alt text-muted mr-3"></i> 75 avenida norte
@@ -187,16 +187,16 @@
                 <div class="salient-fav fav-format">
                     <i class="fas fa-star text-warning"></i>
                 </div>
+                <div class="salient-interest d-flex justify-content-around">
+                    <i class="fas fa-heart text-danger fav-format"></i>
+                    <i class="fas fa-ban text-danger fav-format"></i>
+                </div>
             </div>
             <div class="card-body">
                 <div class="d-flex justify-content-between align-items-center">
                     <h5 class="card-title text-accent">Amplia y recién construida</h5>
-                    <div class="w-25 d-flex justify-content-around">
-                        <i class="fas fa-heart text-danger fav-format"></i>
-                        <i class="fas fa-ban text-danger fav-format"></i>
-                    </div>
                 </div>
-                <h5><i class="fas fa-dollar-sign"></i>1000</h5>
+                <h5><i class="fas fa-dollar-sign">1000</i></h5>
                 <hr>
                 <p>
                     <i class="fas fa-map-marker-alt text-muted mr-3"></i> 75 avenida norte
@@ -229,17 +229,17 @@
                 <div class="salient-fav fav-format">
                     <i class="fas fa-star text-warning"></i>
                 </div>
+                <div class="salient-interest d-flex justify-content-around">
+                    <i class="fas fa-heart text-danger fav-format"></i>
+                    <i class="fas fa-ban text-danger fav-format"></i>
+                </div>
             </div>
 
             <div class="card-body">
                 <div class="d-flex justify-content-between align-items-center">
                     <h5 class="card-title text-accent">Exculsiva del sitio web</h5>
-                    <div class="w-25 d-flex justify-content-around">
-                        <i class="fas fa-heart text-danger fav-format"></i>
-                        <i class="fas fa-ban text-danger fav-format"></i>
-                    </div>
                 </div>
-                <h5><i class="fas fa-dollar-sign"></i>1000</h5>
+                <h5><i class="fas fa-dollar-sign">1000</i></h5>
                 <hr>
                 <p>
                     <i class="fas fa-map-marker-alt text-muted mr-3"></i> 75 avenida norte
@@ -272,17 +272,17 @@
                 <div class="salient-fav fav-format">
                     <i class="fas fa-star text-warning"></i>
                 </div>
+                <div class="salient-interest d-flex justify-content-around">
+                    <i class="fas fa-heart text-danger fav-format"></i>
+                    <i class="fas fa-ban text-danger fav-format"></i>
+                </div>
             </div>
 
             <div class="card-body">
                 <div class="d-flex justify-content-between align-items-center">
                     <h5 class="card-title text-accent">Removida a finales de septiembre</h5>
-                    <div class="w-25 d-flex justify-content-around">
-                        <i class="fas fa-heart text-danger fav-format"></i>
-                        <i class="fas fa-ban text-danger fav-format"></i>
-                    </div>
                 </div>
-                <h5><i class="fas fa-dollar-sign"></i>1000</h5>
+                <h5><i class="fas fa-dollar-sign">1000</i></h5>
                 <hr>
                 <p>
                     <i class="fas fa-map-marker-alt text-muted mr-3"></i> 75 avenida norte
@@ -315,17 +315,17 @@
                 <div class="salient-fav fav-format">
                     <i class="fas fa-star text-warning"></i>
                 </div>
+                <div class="salient-interest d-flex justify-content-around">
+                    <i class="fas fa-heart text-danger fav-format"></i>
+                    <i class="fas fa-ban text-danger fav-format"></i>
+                </div>
             </div>
 
             <div class="card-body">
                 <div class="d-flex justify-content-between align-items-center">
                     <h5 class="card-title text-accent">Recién remodelada</h5>
-                    <div class="w-25 d-flex justify-content-around">
-                        <i class="fas fa-heart text-danger fav-format"></i>
-                        <i class="fas fa-ban text-danger fav-format"></i>
-                    </div>
                 </div>
-                <h5><i class="fas fa-dollar-sign"></i>1000</h5>
+                <h5><i class="fas fa-dollar-sign">1000</i></h5>
                 <hr>
                 <p>
                     <i class="fas fa-map-marker-alt text-muted mr-3"></i> 75 avenida norte
