--- a/src/main/resources/templates/client/search.html
+++ b/src/main/resources/templates/client/search.html
@@ -3,12 +3,9 @@
 
 <head th:insert="client/fragments/navbar::header-files"></head>
 
-<script async defer src="https://maps.googleapis.com/maps/api/js?v=3&amp;sensor=false&key=AIzaSyCXeby84Czz7k7aBjHuUGw8BZEhhl-k_qI"></script>
+<script async defer src="https://maps.googleapis.com/maps/api/js?v=3&key=AIzaSyCXeby84Czz7k7aBjHuUGw8BZEhhl-k_qI"></script>
 
-<script th:replace="client/inline/map-config-search::map-javascript"></script>
-
-
-<body onload="initMap()">
+<body>
 <!--nav bar -->
 <header id="menu-search" class="bg-light">
     <nav th:replace="client/fragments/navbar::commun"></nav>
@@ -35,7 +32,7 @@
                 <h3 class="title pt-2 pb-1 col-md-12 col-sm-12">Resultados de busqueda</h3>
                 <div class="col-md-12">
                     <div id="search-results" class="row justify-content-center">
-                        <div class="col-md-3 mb-4">
+                        <div class="col-md-3 mb-4 pl-1 pr-1">
                             <a th:href="@{/description}" class="custom-card">
                                 <div class="card target-found">
                                     <div class="salient-img">
@@ -54,7 +51,7 @@
                                             <h5 class="card-title text-accent">Amplia y recién construida</h5><i
                                                 class="fas fa-heart text-danger fav-format"></i>
                                         </div>
-                                        <h5><i class="fas fa-dollar-sign"></i>1000</h5>
+                                        <h5><i class="fas fa-dollar-sign">1000</i></h5>
                                         <hr>
                                         <p>
                                             <i class="fas fa-map-marker-alt text-muted mr-3"></i> 75 avenida norte
@@ -77,7 +74,7 @@
                                 </div>
                             </a>
                         </div>
-                        <div class="col-md-3 mb-4">
+                        <div class="col-md-3 mb-4 pl-1 pr-1">
                             <a th:href="@{/description}" class="custom-card">
                                 <div class="card target-found">
                                     <div class="salient-img">
@@ -96,7 +93,7 @@
                                             <h5 class="card-title text-accent">Exculsiva del sitio web</h5><i
                                                 class="fas fa-heart text-danger fav-format"></i>
                                         </div>
-                                        <h5><i class="fas fa-dollar-sign"></i>1000</h5>
+                                        <h5><i class="fas fa-dollar-sign">1000</i></h5>
                                         <hr>
                                         <p>
                                             <i class="fas fa-map-marker-alt text-muted mr-3"></i> 75 avenida norte
@@ -119,7 +116,7 @@
                                 </div>
                             </a>
                         </div>
-                        <div class="col-md-3 mb-4">
+                        <div class="col-md-3 mb-4 pl-1 pr-1">
                             <a th:href="@{/description}" class="custom-card">
                                 <div class="card target-found">
                                     <div class="salient-img">
@@ -138,7 +135,7 @@
                                             <h5 class="card-title text-accent">Diseño rústico</h5><i
                                                 class="fas fa-heart text-danger fav-format"></i>
                                         </div>
-                                        <h5><i class="fas fa-dollar-sign"></i>1000</h5>
+                                        <h5><i class="fas fa-dollar-sign">1000</i></h5>
                                         <hr>
                                         <p>
                                             <i class="fas fa-map-marker-alt text-muted mr-3"></i> 75 avenida norte
@@ -161,7 +158,7 @@
                                 </div>
                             </a>
                         </div>
-                        <div class="col-md-3 mb-4">
+                        <div class="col-md-3 mb-4 pl-1 pr-1">
                             <a th:href="@{/description}" class="custom-card">
                                 <div class="card target-found">
                                     <div class="salient-img">
@@ -180,7 +177,7 @@
                                             <h5 class="card-title text-accent">Removida a final de agosto</h5><i
                                                 class="fas fa-heart text-danger fav-format"></i>
                                         </div>
-                                        <h5><i class="fas fa-dollar-sign"></i>1000</h5>
+                                        <h5><i class="fas fa-dollar-sign">1000</i></h5>
                                         <hr>
                                         <p>
                                             <i class="fas fa-map-marker-alt text-muted mr-3"></i> 75 avenida norte
@@ -203,7 +200,7 @@
                                 </div>
                             </a>
                         </div>
-                        <div class="col-md-3 mb-4">
+                        <div class="col-md-3 mb-4 pl-1 pr-1">
                             <a th:href="@{/description}" class="custom-card">
                                 <div class="card target-found">
                                     <div class="salient-img">
@@ -222,7 +219,7 @@
                                             <h5 class="card-title text-accent">Recién remodelada</h5><i
                                                 class="fas fa-heart text-danger fav-format"></i>
                                         </div>
-                                        <h5><i class="fas fa-dollar-sign"></i>1000</h5>
+                                        <h5><i class="fas fa-dollar-sign">1000</i></h5>
                                         <hr>
                                         <p>
                                             <i class="fas fa-map-marker-alt text-muted mr-3"></i> 75 avenida norte
@@ -245,7 +242,7 @@
                                 </div>
                             </a>
                         </div>
-                        <div class="col-md-3 mb-4">
+                        <div class="col-md-3 mb-4 pl-1 pr-1">
                             <a th:href="@{/description}" class="custom-card">
                                 <div class="card target-found">
                                     <div class="salient-img">
@@ -264,7 +261,7 @@
                                             <h5 class="card-title text-accent">Se necesita inquilino, rápido</h5><i
                                                 class="fas fa-heart text-danger fav-format"></i>
                                         </div>
-                                        <h5><i class="fas fa-dollar-sign"></i>1000</h5>
+                                        <h5><i class="fas fa-dollar-sign">1000</i></h5>
                                         <hr>
                                         <p>
                                             <i class="fas fa-map-marker-alt text-muted mr-3"></i> 75 avenida norte
@@ -299,5 +296,6 @@
 <div th:replace="client/fragments/footer::script-files"></div>
 
 <script type="text/javascript" th:src="@{/assets/js/client/search/search-content.js}"></script>
+<script th:replace="client/inline/map-config-search::map-javascript"></script>
 </body>
 </html>
