First step to validator

--- a/src/main/resources/static/assets/css/main-style.css
+++ b/src/main/resources/static/assets/css/main-style.css
@@ -350,7 +350,7 @@ ul#menu-top-index> li:last-child  {
     border: 1px solid #23daeb;
     border-radius: 5px;
 
-    background: #c1c5fe;
+    background: #aac1fe;
     color: #3ba3eb;
     text-align: center;
     line-height: 20px;
